--- a/2cards.html
+++ b/2cards.html
@@ -61,7 +61,7 @@
 
     <div class="container-fluid">
       <div class="row">
-        <nav class="col-sm-3 col-md-2 d-none d-sm-block">
+        <nav class="col-sm-3 col-md-2 d-none d-sm-block" style="padding-left: 3%; padding-right: 0;">
           <h5>เงื่อนไขพิเศษ</h5>
             <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
               <input type="checkbox" class="custom-control-input">
@@ -128,7 +128,6 @@
               <span class="custom-control-description">ทุนให้เปล่า</span>
             </label>
         </nav>
-
         <main role="main" class="col-sm-9 ml-sm-auto col-md-10"> 
           <section class="row text-center" style="padding: 0;">
             <div class="col-md-4 col-sm-3 placeholder">
@@ -137,12 +136,21 @@
             <div class="col-md-4 col-sm-3 placeholder"></div>
             <div class="col-md-4 col-sm-3 placeholder">
               <a class="back-detail" style="float: left;" href="#">&lt; กลับสู่หน้าค้นหา</a>
-              <a  href="#1a" data-toggle="tab"><i class="fa fa-th-large bar-list"></i></a>
-              <a  href="#2a" data-toggle="tab"><i class="fa fa-bars bar-list"></i></a>
-              
+<ul class="nav nav-tabs" role="tablist" style="padding-left: 5%;">
+  <li class="nav-item">
+    <a class="nav-link active" data-toggle="tab" href="#home" role="tab"><i class="fa fa-th-large bar-list"></i></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" data-toggle="tab" href="#profile" role="tab"><i class="fa fa-bars bar-list"></i></a>
+  </li>
+              <!-- <i class="fa fa-th-large bar-list"></i>
+              <i class="fa fa-bars bar-list"></i> -->
+</ul>
             </div>
 
-            <div class="col-md-12 placeholder type tab-pane" id="1a">
+<div class="tab-content">
+<div class="tab-pane active" id="home" role="tabpanel">
+            <div class="col-md-12 placeholder type">
               <div class="row cards-section">
 
                 <div class="col-lg-4 col-md-6 col-sm-6 placeholder">
@@ -154,7 +162,7 @@
                     <span class="bg-logo">
                       <img class="img-fluid" src="images/Esso_textlogo.png">
                     </span>
-                    <span class="caption-details p-responsive text-left">
+                    <span class="caption-details d-responsive text-left">
                       <p>จำนวนเงิน&nbsp;10,000 บาท</p>
                       <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
                     </span>
@@ -170,7 +178,7 @@
                     <span class="bg-logo">
                       <img class="img-fluid" src="images/kawasaki.png">
                     </span>
-                    <span class="caption-details p-responsive text-left">
+                    <span class="caption-details d-responsive text-left">
                       <p>จำนวนเงิน&nbsp;10,000 บาท</p>
                       <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
                     </span>
@@ -186,7 +194,7 @@
                     <span class="bg-logo">
                       <img class="img-fluid" src="images/kys.jpg">
                     </span>
-                    <span class="caption-details p-responsive text-left">
+                    <span class="caption-details d-responsive text-left">
                       <p>จำนวนเงิน&nbsp;10,000 บาท</p>
                       <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
                     </span>
@@ -202,7 +210,7 @@
                     <span class="bg-logo">
                       <img class="img-fluid" src="images/kys.jpg">
                     </span>
-                    <span class="caption-details p-responsive text-left">
+                    <span class="caption-details d-responsive text-left">
                       <p>จำนวนเงิน&nbsp;10,000 บาท</p>
                       <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
                     </span>
@@ -218,7 +226,7 @@
                     <span class="bg-logo">
                       <img class="img-fluid" src="images/kys.jpg">
                     </span>
-                    <span class="caption-details p-responsive text-left">
+                    <span class="caption-details d-responsive text-left">
                       <p>จำนวนเงิน&nbsp;10,000 บาท</p>
                       <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
                     </span>
@@ -235,7 +243,7 @@
                     <span class="bg-logo">
                       <img class="img-fluid" src="images/kys.jpg">
                     </span>
-                    <span class="caption-details p-responsive text-left">
+                    <span class="caption-details d-responsive text-left">
                       <p>จำนวนเงิน&nbsp;10,000 บาท</p>
                       <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
                     </span>
@@ -244,9 +252,9 @@
 
               </div> <!-- to toggle -->
             </div>
-          </section>
-
-        <div class="table100 ver5 m-b-11 d-none d-sm-block tab-pane" id="2a" style="padding-left: 10px;">
+</div>         
+<div class="tab-pane" id="profile" role="tabpanel" style="padding-left: 5%;">
+        <div class="table100 ver5 m-b-11 d-none d-sm-block" style="padding-left: 10px;">
           <div class="table100-head">
             <table>
               <thead>
@@ -315,12 +323,15 @@
             </table>
           </div>
         </div>
+</div>
+</div>
+      </section>
+    </main>
 
-        </main>
 
       </div> <!-- row end -->
     </div>
-    
+
     <!-- FOOTER -->
     <footer class="container">
       <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-angle-up" style="font-size: 150%;" aria-hidden="true"></i></button>
@@ -332,7 +343,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
     <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap/bootstrap.min.js"></script>
     <!-- Go to top -->
     <script src="js/gototop.js"></script>
   </body>
