--- a/detail-respon.html
+++ b/detail-respon.html
@@ -28,9 +28,8 @@
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#page-top"><img class="logo" style="position: absolute;top:0;" src="images/logo2.png"></a>
             <p class="logo-caption">Scholarship showroom</p>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
       </button>
+      <!-- Dropdown -->
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="dropdown">
@@ -46,11 +45,11 @@
     </nav>
 
     <main role="main" class="container">
-
+      <!-- Left & Middle part -->
       <div class="row row-offcanvas row-offcanvas-right">
-
         <div class="col-12 col-md-9">
           <p class="float-right d-md-none">
+            <!-- Toggle when small screen size -->
             <button type="button" class="btn btn-primary btn-sm" data-toggle="offcanvas">Toggle nav</button>
           </p>
           <h3>ทุนเพชรพระจอมเกล้าปริญญาตรี</h3>
@@ -65,6 +64,7 @@
               <p>1 ต.ค. - 2 พ.ย. 2560</p>
             </div>
           </div>
+
           <div class="jumbotron">
             <h5>รายละเอียด</h5>
             <p>      ทุุนสนับสนุนนักศึกษาที่มีความสามารถ ทั้งด้านวิชาการดีเด่น และความสามารถเฉพาะด้าน ได้แก่ ด้านความคิดสร้างสรรค์
@@ -101,7 +101,9 @@
 
           
         </div><!--/span-->
+      <!-- End Left & Middle part -->
 
+      <!-- Right part -->
         <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
           <a class="back-detail" href="#">&lt; กลับสู่หน้าค้นหา</a>
           <div class="list-group">
@@ -133,8 +135,9 @@
           <p style="margin: 1rem;">คุณศุริษา แสงอรุณ (พี่เมี้ยว)<br>ติดต่อ 02 4708107</p>
         </div><!--/span-->
       </div><!--/row-->
-
+      <!-- End Right part -->
       <hr>
+      <!-- Bottom Part -->
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-4 text-center">
@@ -185,7 +188,10 @@
         </div><!--/row-->
       </div>
     </main><!--/.container-->
+    
+    <!-- Go to top button -->
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-angle-up" style="font-size: 150%;" aria-hidden="true"></i></button>
+
     <!-- FOOTER -->
     <footer class="foot">
     <div class="container">
@@ -208,19 +214,16 @@
     </div>
     </footer>
 
-
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
     <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap/bootstrap.min.js"></script>
     <script src="js/offcanvas.js"></script>
     <!-- Go to top -->
     <script src="js/gototop.js"></script>
-
 
   </body>
 </html>
