--- a/2cards.html
+++ b/2cards.html
@@ -136,20 +136,20 @@
             <div class="col-md-4 col-sm-3 placeholder"></div>
             <div class="col-md-4 col-sm-3 placeholder">
               <a class="back-detail" style="float: left;" href="#">&lt; กลับสู่หน้าค้นหา</a>
-<ul class="nav nav-tabs" role="tablist" style="padding-left: 5%;">
-  <li class="nav-item">
-    <a class="nav-link active" data-toggle="tab" href="#home" role="tab"><i class="fa fa-th-large bar-list"></i></a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" data-toggle="tab" href="#profile" role="tab"><i class="fa fa-bars bar-list"></i></a>
-  </li>
-              <!-- <i class="fa fa-th-large bar-list"></i>
-              <i class="fa fa-bars bar-list"></i> -->
-</ul>
+              <ul class="nav nav-tabs" role="tablist" style="padding-left: 5%;">
+                <li class="nav-item">
+                  <a class="nav-link active" data-toggle="tab" href="#home" role="tab"><i class="fa fa-th-large bar-list"></i></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" data-toggle="tab" href="#profile" role="tab"><i class="fa fa-bars bar-list"></i></a>
+                </li>
+              </ul>
             </div>
-
-<div class="tab-content">
-<div class="tab-pane active" id="home" role="tabpanel">
+        <!-- Tab -->
+        <div class="tab-content">
+          <!-- Tab for card -->
+          <div class="tab-pane active" id="home" role="tabpanel">
+            <!-- Head -->
             <div class="col-md-12 placeholder type">
               <div class="row cards-section">
 
@@ -168,7 +168,8 @@
                     </span>
                   </a>
                 </div>
-                
+                <!-- End Head -->
+                <!-- Cards -->
                 <div class="col-lg-4 col-md-6 col-sm-6 placeholder">
                   <a class="card"  href="#">
                     <span class="topcard" id="orange-gradient">
@@ -249,82 +250,85 @@
                     </span>
                   </a>
                 </div>
+                <!-- End Cards -->
 
-              </div> <!-- to toggle -->
+              </div> <!-- Row card section end -->
             </div>
-</div>         
-<div class="tab-pane" id="profile" role="tabpanel" style="padding-left: 5%;">
-        <div class="table100 ver5 m-b-11 d-none d-sm-block" style="padding-left: 10px;">
-          <div class="table100-head">
-            <table>
-              <thead>
-                <tr class="row100 head" style="cursor: default; box-shadow: none;">
-                  <th class="cell100 column1">ชื่อทุน</th>
-                  <th class="cell100 column2">คณะ</th>
-                  <th class="cell100 column3">ประเภททุน</th>
-                  <th class="cell100 column4">ช่วงเวลาเปิดรับสมัคร</th>
-                  <th class="cell100 column5">จำนวนเงิน</th>
-                </tr>
-              </thead>
-            </table>
-          </div>
+          </div>  <!-- Tab for card end --> 
+          <!-- Tab for list -->
+          <div class="tab-pane" id="profile" role="tabpanel" style="padding-left: 5%;">
+            <div class="table100 ver5 m-b-11 d-none d-sm-block" style="padding-left: 10px;">
+              <!-- Head table -->
+              <div class="table100-head">
+                <table>
+                  <thead>
+                    <tr class="row100 head" style="cursor: default; box-shadow: none;">
+                      <th class="cell100 column1">ชื่อทุน</th>
+                      <th class="cell100 column2">คณะ</th>
+                      <th class="cell100 column3">ประเภททุน</th>
+                      <th class="cell100 column4">ช่วงเวลาเปิดรับสมัคร</th>
+                      <th class="cell100 column5">จำนวนเงิน</th>
+                    </tr>
+                  </thead>
+                </table>
+              </div>
+              <!-- Body table -->
+              <div class="table100-body">
+                <table>
+                  <tbody>
+                    <tr class="row100 body" onclick="window.open('https://www.youtube.com/','_blank');">
+                      <td class="cell100 column1">ทุนด้านวิศวกรรมศาสตร์<br>โรงแรมแมนดารินโอเรียนเต็ลกรุงเทพฯ</td>
+                      <td class="cell100 column2">วิศวกรรมศาสตร์</td>
+                      <td class="cell100 column3">ทุนจ้างงาน</td>
+                      <td class="cell100 column4">วันนี้ - 31 พ.ค. 2560</td>
+                      <td class="cell100 column5">100,000 บาท</td>
+                    </tr>
 
-          <div class="table100-body">
-            <table>
-              <tbody>
-                <tr class="row100 body" onclick="window.open('https://www.youtube.com/','_blank');">
-                  <td class="cell100 column1">ทุนด้านวิศวกรรมศาสตร์<br>โรงแรมแมนดารินโอเรียนเต็ลกรุงเทพฯ</td>
-                  <td class="cell100 column2">วิศวกรรมศาสตร์</td>
-                  <td class="cell100 column3">ทุนจ้างงาน</td>
-                  <td class="cell100 column4">วันนี้ - 31 พ.ค. 2560</td>
-                  <td class="cell100 column5">100,000 บาท</td>
-                </tr>
+                    <tr class="row100 body" onclick="window.open('https://www.youtube.com/','_blank');">
+                      <td class="cell100 column1">ทุนเงินยืมเพื่อการศึกษา<br>สำหรับนักศึกษา มจธ.</td>
+                      <td class="cell100 column2">ทุกคณะ</td>
+                      <td class="cell100 column3">ทุนกู้ยืม</td>
+                      <td class="cell100 column4">ตลอดปีการศึกษา 2560</td>
+                      <td class="cell100 column5">แล้วแต่กรณี</td>
+                    </tr>
 
-                <tr class="row100 body" onclick="window.open('https://www.youtube.com/','_blank');">
-                  <td class="cell100 column1">ทุนเงินยืมเพื่อการศึกษา<br>สำหรับนักศึกษา มจธ.</td>
-                  <td class="cell100 column2">ทุกคณะ</td>
-                  <td class="cell100 column3">ทุนกู้ยืม</td>
-                  <td class="cell100 column4">ตลอดปีการศึกษา 2560</td>
-                  <td class="cell100 column5">แล้วแต่กรณี</td>
-                </tr>
+                    <tr class="row100 body" onclick="window.open('https://www.youtube.com/','_blank');">
+                      <td class="cell100 column1">ทุนเพชรพระจอมเกล้า<br>ปริญญาตรี</td>
+                      <td class="cell100 column2">ทุกคณะ</td>
+                      <td class="cell100 column3">ทุนให้เปล่า</td>
+                      <td class="cell100 column4">ตลอดปีการศึกษา 2560</td>
+                      <td class="cell100 column5">220,000 บาท (2 ปี)</td>
+                    </tr>
 
-                <tr class="row100 body" onclick="window.open('https://www.youtube.com/','_blank');">
-                  <td class="cell100 column1">ทุนเพชรพระจอมเกล้า<br>ปริญญาตรี</td>
-                  <td class="cell100 column2">ทุกคณะ</td>
-                  <td class="cell100 column3">ทุนให้เปล่า</td>
-                  <td class="cell100 column4">ตลอดปีการศึกษา 2560</td>
-                  <td class="cell100 column5">220,000 บาท (2 ปี)</td>
-                </tr>
+                    <tr class="row100 body" onclick="window.open('https://www.youtube.com/','_blank');">
+                      <td class="cell100 column1">ทุนเจียระไนเพชร</td>
+                      <td class="cell100 column2">ทุกคณะ</td>
+                      <td class="cell100 column3">ทุนให้เปล่า</td>
+                      <td class="cell100 column4">ตลอดปีการศึกษา 2560</td>
+                      <td class="cell100 column5">แล้วแต่กรณี</td>
+                    </tr>
 
-                <tr class="row100 body" onclick="window.open('https://www.youtube.com/','_blank');">
-                  <td class="cell100 column1">ทุนเจียระไนเพชร</td>
-                  <td class="cell100 column2">ทุกคณะ</td>
-                  <td class="cell100 column3">ทุนให้เปล่า</td>
-                  <td class="cell100 column4">ตลอดปีการศึกษา 2560</td>
-                  <td class="cell100 column5">แล้วแต่กรณี</td>
-                </tr>
+                    <tr class="row100 body" onclick="window.open('https://www.youtube.com/','_blank');">
+                      <td class="cell100 column1">ทุนการศึกษาคาวาซากิ</td>
+                      <td class="cell100 column2">ทุกคณะ</td>
+                      <td class="cell100 column3">ทุนให้เปล่า</td>
+                      <td class="cell100 column4">วันนี้ - 11 ส.ค. 2560</td>
+                      <td class="cell100 column5">50,000 บาท</td>
+                    </tr>
 
-                <tr class="row100 body" onclick="window.open('https://www.youtube.com/','_blank');">
-                  <td class="cell100 column1">ทุนการศึกษาคาวาซากิ</td>
-                  <td class="cell100 column2">ทุกคณะ</td>
-                  <td class="cell100 column3">ทุนให้เปล่า</td>
-                  <td class="cell100 column4">วันนี้ - 11 ส.ค. 2560</td>
-                  <td class="cell100 column5">50,000 บาท</td>
-                </tr>
-
-                <tr class="row100 body" onclick="window.open('https://www.youtube.com/','_blank');">
-                  <td class="cell100 column1">ทุนการศึกษาเอสโซ่<br>สมโภชกรุงรัตนโกสินทร์ 200 ปี</td>
-                  <td class="cell100 column2">ทุกคณะ</td>
-                  <td class="cell100 column3">ทุนให้เปล่า</td>
-                  <td class="cell100 column4">23 ส.ค. - 14 ก.ย. 2560</td>
-                  <td class="cell100 column5">10,000 บาท</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-</div>
-</div>
+                    <tr class="row100 body" onclick="window.open('https://www.youtube.com/','_blank');">
+                      <td class="cell100 column1">ทุนการศึกษาเอสโซ่<br>สมโภชกรุงรัตนโกสินทร์ 200 ปี</td>
+                      <td class="cell100 column2">ทุกคณะ</td>
+                      <td class="cell100 column3">ทุนให้เปล่า</td>
+                      <td class="cell100 column4">23 ส.ค. - 14 ก.ย. 2560</td>
+                      <td class="cell100 column5">10,000 บาท</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div> <!-- End Tab for lists -->
+        </div> <!-- End tab -->
       </section>
     </main>
 
